# lab2-sw

./: Muhahmadcharif's landscape (Current).md  README.md  la.md  pyproject.toml  requirements.txt  t --count HEAD
.github/workflows/: main1.yml
6688194_charif/: calculator.py
design/: D1_Design .md
src/: main.py  models.py
tests/: test_app.py  test_models.py
